--- a/TorsionExperiment/pendulum.bib
+++ b/TorsionExperiment/pendulum.bib
@@ -35,4 +35,38 @@ issn = {0022-2313},
 doi = {10.1016/j.jlumin.2009.07.027},
 author = {{Dalip Singh Mehta and Kanchan Saxena and Satish Kumar Dubey and Chandra Shakher}},
 }
+@book{newton,
+  title={Newton's Principia: The Mathematical Principles of Natural Philosophy},
+  author={Newton, I. and Motte, A. and Chittenden, N.W.},
+  lccn={04014428},
+  series={Newton's Principia: The Mathematical Principles of Natural Philosophy},
+  year={1848},
+  publisher={Daniel Adee}
+}
+@ARTICLE{nist,
+   author = {{Gundlach}, J.~H. and {Merkowitz}, S.~M.},
+    title = "{Measurement of Newton's Constant Using a Torsion Balance with Angular Acceleration Feedback}",
+  journal = {Physical Review Letters},
+   eprint = {arXiv:gr-qc/0006043},
+     year = 2000,
+    month = oct,
+   volume = 85,
+    pages = {2869-2872},
+      doi = {10.1103/PhysRevLett.85.2869},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@book{densearth,
+  title={The Laws of Gravitation: Memoirs by Newton, Bouguer and Cavendish, Together with Abstracts of Other Important Memoirs},
+  author={Mackenzie, A.S. and Newton, I. and Cavendish, H.},
+  lccn={00004471},
+  series={Scientific memoirs, 9},
+  year={1900},
+  publisher={American Book Company}
+}
+
+@misc{manual,
+	author = {{Pasco Scientific}},
+	title = {Instruction Manual},
+	note= {[Online ] Available from: http://phys.ed.ac.uk},
+}
 
